--- a/demos/tornadodashboard.html
+++ b/demos/tornadodashboard.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <title>Shawns Example Map and Chart Dashboard</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
