--- a/demos/tornadodashboard.html
+++ b/demos/tornadodashboard.html
@@ -38,7 +38,7 @@
 		.then(data => {
 			geojsonLayer = L.geoJSON(data, {
 				onEachFeature: function(feature, layer) {
-					layer.bindPopup(feature.properties.event_type + ' ' + feature.properties.month); // Adjust based on your GeoJSON structure
+					layer.bindPopup('<h4>' + feature.properties.month + ':' + feature.properties.event_type + '</h4><p>' + feature.properties.event_description +'</p>' ); // Adjust based on your GeoJSON structure
 				}
 			}).addTo(map);
 
